2010-05-18  Cedrick Ansorge <Cedrick.Ansorge.zmaw.de>

	* Added operator eof - Calculate EOFs in spatial or time space
        * Added operator eoftime - Calculate EOFs in time space
        * Added operator eofspatial - Calculate EOFs in spatial space

2010-05-17  Ralf Mueller  <Ralf.Mueller@zmaw.de>

	* Added operator consecsum - Consecutive Sum
	* Added operator consects - Consecutive Timesteps

2010-04-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.4
	* Version 1.4.4 released

2010-04-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * fldsum: change result from 0 to missval, if only missing values found [report: Angelika Heil]
	* intyear: set the interpolation result always to missval, if missing values found [report: Angelika Heil]

2010-04-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator delday

2010-04-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added support for time units 3hours and 6hours [request: Jaison-Thomas Ambadan]
	
2010-04-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Remap: bypass variables with gridtype generic and only one gridpoint

2010-04-04  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* selgrid: change gridID to grididx (bug fix)
	* Added operator cloudlayer: compute low, mid and high clouds [request: Daniel Klocke]

2010-04-01  Martin Claus  <mclaus@ifm-geomar.de>

	* vertwind: added missing value support
	
2010-03-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* standard deviation (bug fix): change the result from missval to zero, if variance is zero [report: Jaison-Thomas Ambadan]

2010-03-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator tstepcount: count number of timesteps (experimental) [request: Swantje Preuschmann]

2010-03-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* import_binary: added support for variables with different number of levels [report: Dennis Shea]

2010-03-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
