@@ -105,6 +105,7 @@ doc/tex/mod/EcaTx10p -text
 doc/tex/mod/EcaTx90p -text
 doc/tex/mod/Enlarge -text
 doc/tex/mod/Ensstat -text
+doc/tex/mod/Eofcoeff -text
 doc/tex/mod/Exprf -text
 doc/tex/mod/Fdns -text
 doc/tex/mod/Filedes -text
