@@ -77,6 +77,7 @@ Detrend       Regression
 Trend         Regression
 Subtrend      Regression
 EOFs          EOFs
+Eofcoeff      EOFs
 Remapgrid     Interpolation
 Genweights    Interpolation
 Remap         Interpolation
